# parallel_computing

./: CMakeLists.txt  main.cpp
pool/: thread_pool.cpp  thread_pool.h
queue/: queue.h
utils/: timer.cpp  timer.h
